RESOLVED FIXED167197
[Win] Test output results should not be written twice.
https://bugs.webkit.org/show_bug.cgi?id=167197
Summary [Win] Test output results should not be written twice.
Per Arne Vollan
Reported 2017-01-19 04:35:31 PST
Test results indicate that test output is sometimes written twice for the same test, causing flakiness.
Attachments
Patch (1.91 KB, patch)
2017-01-19 04:42 PST, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-01-19 04:42:05 PST
Brent Fulgham
Comment 2 2017-01-20 09:26:46 PST
Comment on attachment 299243 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=299243&action=review r=me > Tools/DumpRenderTree/win/DumpRenderTree.cpp:685 > + It would be good to understand why this happens. Do we need a similar protection in macOS and other platforms? Or does Windows call dump() in more places?
WebKit Commit Bot
Comment 3 2017-01-20 09:51:35 PST
Comment on attachment 299243 [details] Patch Clearing flags on attachment: 299243 Committed r210965: <http://trac.webkit.org/changeset/210965>
WebKit Commit Bot
Comment 4 2017-01-20 09:51:38 PST
All reviewed patches have been landed. Closing bug.
Per Arne Vollan
Comment 5 2017-01-20 10:17:11 PST
(In reply to comment #2) > Comment on attachment 299243 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=299243&action=review > > r=me > > > Tools/DumpRenderTree/win/DumpRenderTree.cpp:685 > > + > > It would be good to understand why this happens. Do we need a similar > protection in macOS and other platforms? Or does Windows call dump() in more > places? macOS will not process messages after dump() is called, while Windows will process a few messages before receiving the WM_QUIT message. This opens up for dump() to be called again on Windows. This might happen if the test performs a reload, and calls notifyDone() a second time. Thanks for reviewing!
Note You need to log in before you can comment on or make changes to this bug.