[Win] Test output results should not be written twice. https://bugs.webkit.org/show_bug.cgi?id=167197

Reviewed by Brent Fulgham.

Prevent test output from being written twice by returning early from
the dump() function, if it already has been called.
This patch also adds a missing newline to a test output line.

* DumpRenderTree/win/DumpRenderTree.cpp:
(dump):


Canonical link: https://commits.webkit.org/184287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210965 268f45cc-cd09-0410-ab3c-d52691b4dbfc